--- a/DNN-MNP.ipynb
+++ b/DNN-MNP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8c39207",
+   "id": "69da6c4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0513ca6",
+   "id": "322147e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4415ffa0",
+   "id": "f0b316cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,20 @@
     "seed(1)\n",
     "start = timeit.default_timer()\n",
     "\n",
-    "# import timeit\n",
-    "# from random import seed\n",
-    "# from keras.models import Model\n",
-    "# from tensorflow.keras.models import Sequential\n",
+    "import timeit\n",
+    "from random import seed\n",
+    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Sequential\n",
     "\n",
-    "# import numpy as np \n",
-    "# import tensorflow.compat.v1.keras.backend as K\n",
-    "# import tensorflow as tf\n",
-    "# tf.compat.v1.disable_eager_execution()\n",
-    "# from matplotlib import pyplot as plt\n",
-    "# import pandas as pd\n",
-    "# from keras.constraints import Constraint\n",
+    "import numpy as np \n",
+    "import tensorflow.compat.v1.keras.backend as K\n",
+    "import tensorflow as tf\n",
+    "tf.compat.v1.disable_eager_execution()\n",
+    "from matplotlib import pyplot as plt\n",
+    "import pandas as pd\n",
+    "from keras.constraints import Constraint\n",
     "\n",
-    "# import math\n",
+    "import math\n",
     "\"\"\"Dataset_____________________________________________________________________\"\"\"\n",
     "\n",
     "# Bp = -1\n",
@@ -80,132 +80,134 @@
     "# classes = dense_to_one_hot(labels_dense=Dataset['choice'], num_classes=2)\n",
     "\"\"\"DNN Model___________________________________________________________________\"\"\"\n",
     "\n",
-    "# from keras import activations\n",
-    "# from keras.layers import Layer\n",
-    "# import tensorflow as tf\n",
+    "from keras import activations\n",
+    "from keras.layers import Layer\n",
+    "import tensorflow as tf\n",
     "\n",
     "                                   \n",
     "\n",
     "class DNN_MNP():\n",
-    "    l\n",
+    "    def __init__(this, formula = 'y ~ .', batch = 100\n",
+    "        iternum=200):\n",
+    "        this.formula = formoula\n",
+    "        this.batch = batch\n",
+    "        this.iternum = iternum\n",
+    "        \n",
     "    \n",
-    "class Dense1(Layer):\n",
-    "    def __init__(self,\n",
-    "                 units,batch,iternum,\n",
-    "                 activation=None, **kwargs):\n",
-    "        self.units = units\n",
-    "        self.activation = activations.get(activation)\n",
-    "        self.batch = batch\n",
-    "        self.iternum = iternum\n",
+    "    class Dense1(Layer):\n",
+    "        def __init__(self,\n",
+    "                     units,batch,iternum,\n",
+    "                     activation=None, **kwargs):\n",
+    "            self.units = units\n",
+    "            self.activation = activations.get(activation)\n",
+    "            self.batch = batch\n",
+    "            self.iternum = iternum\n",
     "\n",
     "\n",
-    "        super().__init__(**kwargs)\n",
+    "            super().__init__(**kwargs)\n",
     "\n",
     "\n",
-    "    def build(self, input_shape):\n",
+    "        def build(self, input_shape):\n",
     "\n",
+    "\n",
+    "            self.W1 = self.add_weight(name='Ba',shape=(1,))\n",
+    "            self.W2 = self.add_weight(name='Bb',shape=(1,))\n",
+    "            self.W3 = self.add_weight(name='Bp',shape=(1,))\n",
+    "            self.W4 = self.add_weight(name='Bq',shape=(1,))\n",
+    "            self.W5 = self.add_weight(name='cor',shape=(1,),initializer = tf.keras.initializers.Constant(0.5),\n",
+    "                                          trainable=True,constraint=tf.keras.constraints.MinMaxNorm(max_value=0.98))\n",
+    "\n",
+    "            super().build(input_shape)\n",
+    "\n",
+    "        def call(self, inputs, **kwargs):\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "            Error1= np.random.normal(loc = 0, scale = 1 , size = (self.iternum,))\n",
+    "            Error2= np.random.normal(loc = 0, scale = 1 , size = (self.iternum,))\n",
+    "\n",
+    "\n",
+    "\n",
+    "            inp=tf.cast(tf.transpose(tf.stack((Error1,Error2))), tf.float32)\n",
+    "            o=tf.constant([0.0])\n",
+    "            p=tf.constant([1.0])\n",
+    "\n",
+    "\n",
+    "\n",
+    "            row1=tf.reshape(tf.stack([p,o]),(2,))\n",
+    "\n",
+    "            row2=tf.reshape(tf.stack([self.W5,tf.sqrt(p-tf.square(self.W5))]),(2,))\n",
+    "\n",
+    "            L = tf.stack([row1,row2])\n",
+    "\n",
+    "            error=self.activation(tf.matmul(inp,L))\n",
+    "\n",
+    "            v1 = tf.expand_dims((self.W1 * inputs[:,0]) + (self.W2 * inputs[:,1]) + (self.W3 * inputs[:,2]) + (self.W4 * inputs[:,3]),axis = 1)\n",
+    "\n",
+    "\n",
+    "            out1=tf.expand_dims(tf.matmul(v1,tf.ones((1, self.iternum), tf.float32))+ error[:,0],axis = 1)\n",
     "        \n",
-    "        self.W1 = self.add_weight(name='Ba',shape=(1,))\n",
-    "        self.W2 = self.add_weight(name='Bb',shape=(1,))\n",
-    "        self.W3 = self.add_weight(name='Bp',shape=(1,))\n",
-    "        self.W4 = self.add_weight(name='Bq',shape=(1,))\n",
-    "        self.W5 = self.add_weight(name='cor',shape=(1,),initializer = tf.keras.initializers.Constant(0.5),\n",
-    "                                      trainable=True,constraint=tf.keras.constraints.MinMaxNorm(max_value=0.98))\n",
-    "        \n",
-    "        super().build(input_shape)\n",
-    "\n",
-    "    def call(self, inputs, **kwargs):\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        Error1= np.random.normal(loc = 0, scale = 1 , size = (self.iternum,))\n",
-    "        Error2= np.random.normal(loc = 0, scale = 1 , size = (self.iternum,))\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        inp=tf.cast(tf.transpose(tf.stack((Error1,Error2))), tf.float32)\n",
-    "        o=tf.constant([0.0])\n",
-    "        p=tf.constant([1.0])\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        row1=tf.reshape(tf.stack([p,o]),(2,))\n",
-    "        \n",
-    "        row2=tf.reshape(tf.stack([self.W5,tf.sqrt(p-tf.square(self.W5))]),(2,))\n",
-    "        \n",
-    "        L = tf.stack([row1,row2])\n",
-    "\n",
-    "        error=self.activation(tf.matmul(inp,L))\n",
-    "\n",
-    "        v1 = tf.reshape((self.W1 * inputs[:,0]) + (self.W2 * inputs[:,1]) + (self.W3 * inputs[:,2]) + (self.W4 * inputs[:,3]),(self.batch,1))\n",
-    "        \n",
-    "\n",
-    "        out1=tf.matmul(v1,tf.ones((1, self.iternum), tf.float32))+ error[:,0]\n",
-    "        \n",
     "\n",
     "\n",
-    "        v2 =tf.reshape( (self.W1 * inputs[:,4]) + (self.W2 * inputs[:,5]) + (self.W3 * inputs[:,6])+ (self.W4 * inputs[:,7]),(self.batch,1))\n",
+    "            v2 =tf.expand_dims((self.W1 * inputs[:,4]) + (self.W2 * inputs[:,5]) + (self.W3 * inputs[:,6])+ (self.W4 * inputs[:,7]),axis = 1)\n",
     "\n",
-    "        out2=tf.matmul(v2,tf.ones((1, self.iternum), tf.float32))+ error[:,1]\n",
-    "        \n",
-    "        Scores = tf.reshape(tf.experimental.numpy.hstack((out1, out2)),(-1, out1.shape[1]))\n",
-    "        \n",
-    "        return Scores\n",
-    "                                   \n",
+    "            out2=tf.expand_dims(tf.matmul(v2,tf.ones((1, self.iternum), tf.float32))+ error[:,1],axis = 1)\n",
+    "            out1 = out1 - out2\n",
     "\n",
-    "def F(x):  \n",
-    "    return x\n",
+    "            out2 = out2 - out2\n",
+    "\n",
+    "            Scores = tf.experimental.numpy.hstack((out1, out2))\n",
+    "\n",
+    "\n",
+    "            return Scores\n",
+    "\n",
+    "\n",
+    "        def F(x):  \n",
+    "            return x\n",
+    "\n",
+    "\n",
+    "    def creat_model(this)\n",
+    "        Utility1 = Sequential()\n",
+    "\n",
+    "        batch = 100\n",
+    "        iternum=200\n",
+    "\n",
+    "        Utility1.add(tf.keras.layers.InputLayer((8,), batch_size=batch,name='inp_1'))\n",
+    "        Utility1.add(Dense1(1,batch,iternum=iternum,activation=F))\n",
     "\n",
     "\n",
     "\n",
-    "Utility1 = Sequential()\n",
+    "        mergedOutput1=Utility1.output\n",
     "\n",
     "\n",
     "\n",
+    "        mergedOutput=tf.transpose(mergedOutput1, perm=[0,2,1])\n",
     "\n",
     "\n",
-    "batch = 100\n",
-    "iternum=200\n",
-    "\n",
-    "Utility1.add(tf.keras.layers.InputLayer((8,), batch_size=batch,name='inp_1'))\n",
-    "Utility1.add(Dense1(1,batch,iternum=iternum,activation=F))\n",
+    "        beta=1e4\n",
+    "        mergedOutput = tf.nn.softmax(mergedOutput*beta)\n",
     "\n",
     "\n",
-    "\n",
-    "mergedOutput1=Utility1.output\n",
+    "        mergedOutput=tf.reduce_sum(mergedOutput, 1)\n",
     "\n",
     "\n",
     "\n",
+    "        Sum=tf.reduce_sum(mergedOutput, 1)\n",
     "\n",
-    "mergedOutput=tf.reshape(mergedOutput1,(batch,2,iternum))\n",
-    "\n",
-    "\n",
-    "mergedOutput=tf.transpose(mergedOutput, perm=[0,2,1])\n",
-    "\n",
-    "\n",
-    "beta=1e4\n",
-    "mergedOutput = tf.nn.softmax(mergedOutput*beta)\n",
-    "\n",
-    "\n",
-    "mergedOutput=tf.reduce_sum(mergedOutput, 1)\n",
+    "        main_network= tf.transpose(tf.divide(tf.transpose(mergedOutput),Sum))\n",
     "\n",
     "\n",
     "\n",
-    "Sum=tf.reduce_sum(mergedOutput, 1)\n",
-    "\n",
-    "main_network= tf.transpose(tf.divide(tf.transpose(mergedOutput),Sum))\n",
-    "\n",
+    "        new_model = Model(\n",
+    "        inputs=[Utility1.input], outputs=[main_network])\n",
     "\n",
     "\n",
-    "new_model = Model(\n",
-    "inputs=[Utility1.input], outputs=[main_network])\n",
+    "        print(new_model.summary())\n",
     "\n",
     "\n",
-    "print(new_model.summary())\n",
-    "\n",
-    "\n",
-    "new_model.compile(optimizer= 'adam', loss='categorical_crossentropy'  ,metrics=['categorical_accuracy'])\n",
+    "        def compile_model(this, new_model):\n",
+    "            new_model.compile(optimizer= 'adam', loss='categorical_crossentropy'  ,metrics=['categorical_accuracy'])\n",
     "\n",
     "\n",
     "\n",
