--- a/DNN-MNP.ipynb
+++ b/DNN-MNP.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "69da6c4c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
@@ -14,7 +16,10 @@
    "id": "322147e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('Dataset_MNL.csv')\n",
+    "global().update(df.)"
+   ]
   },
   {
    "cell_type": "code",
