--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,56 +2,150 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "6848bd27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # -*- coding: utf-8 -*-\n",
+    "# \"\"\"\n",
+    "# Created on Tue Aug 16 16:47:35 2022\n",
+    "\n",
+    "# @author: user\n",
+    "# \"\"\"\n",
+    "\n",
+    "\n",
+    "# \"\"\"File 01logit.py\n",
+    "\n",
+    "# :author: Michel Bierlaire, EPFL\n",
+    "# :date: Thu Sep  6 15:14:39 2018\n",
+    "\n",
+    "#  Example of a logit model.\n",
+    "#  Three alternatives: Train, Car and Swissmetro\n",
+    "#  SP data\n",
+    "# \"\"\"\n",
+    "\n",
+    "# import pandas as pd\n",
+    "# import biogeme.database as db\n",
+    "# import biogeme.biogeme as bio\n",
+    "# from biogeme import models\n",
+    "# from biogeme.expressions import Beta\n",
+    "# import numpy as np\n",
+    "# import biogeme.results as res\n",
+    "# from sklearn.metrics import accuracy_score\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from random import seed\n",
+    "# seed(1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ef786509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "class Beta(float):\n",
+    "    BetaList = []\n",
+    "    # global BetaList\n",
+    "\n",
+    "    def __init__(self, name, initial_value=np.random.normal(0, 1), constraint=0):\n",
+    "        \n",
+    "        self.error = False\n",
+    "        if name not in Beta.BetaList:\n",
+    "            Beta.BetaList.append(name)\n",
+    "        else:\n",
+    "            self.error = True\n",
+    "            raise Exception('The Beta name is taken before. Please select unique name for your Beta.')\n",
+    "            self.__del__()\n",
+    "        self.name = name\n",
+    "        self.initialValue = initial_value\n",
+    "        super().__init__(self.initial_value)\n",
+    "        self.constraint = constraint\n",
+    "\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "\n",
+    "    def get_constraint(self):\n",
+    "        return self.constraint\n",
+    "\n",
+    "    def get_initialValue(self):\n",
+    "        return self.initialValue\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        if self.error:\n",
+    "            Beta.BetaList = list(set(Beta.BetaList))\n",
+    "        else:\n",
+    "            Beta.BetaList.remove(self.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33ca609f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "DLL load failed while importing cythonbiogeme: The specified module could not be found.",
+     "ename": "TypeError",
+     "evalue": "float expected at most 1 argument, got 3",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;124;03m\"\"\"File 01logit.py\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \n\u001b[0;32m     11\u001b[0m \u001b[38;5;124;03m:author: Michel Bierlaire, EPFL\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m SP data\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatabase\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdb\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbiogeme\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mbio\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m models\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\biogeme\\database.py:27\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilenames\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mbf\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmessaging\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmsg\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tools\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m draws\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpressions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Variable, isNumeric, Numeric\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\biogeme\\tools.py:20\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmessaging\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmsg\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mexcep\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpressions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Expression\n\u001b[0;32m     22\u001b[0m logger \u001b[38;5;241m=\u001b[39m msg\u001b[38;5;241m.\u001b[39mbioMessage()\n\u001b[0;32m     24\u001b[0m LRTuple \u001b[38;5;241m=\u001b[39m namedtuple(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLRTuple\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmessage statistic threshold\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\biogeme\\expressions.py:20\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mexcep\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmessaging\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmsg\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcythonbiogeme\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mee\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbiogeme\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01midmanager\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IdManager\n\u001b[0;32m     23\u001b[0m logger \u001b[38;5;241m=\u001b[39m msg\u001b[38;5;241m.\u001b[39mbioMessage()\n",
-      "\u001b[1;31mImportError\u001b[0m: DLL load failed while importing cythonbiogeme: The specified module could not be found."
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     ASC_TRAIN \u001b[38;5;241m=\u001b[39m \u001b[43mBeta\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mASC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m     ASC_SM \u001b[38;5;241m=\u001b[39m Beta(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mASC\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: float expected at most 1 argument, got 3"
      ]
     }
    ],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
-    "\"\"\"\n",
-    "Created on Tue Aug 16 16:47:35 2022\n",
-    "\n",
-    "@author: user\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "\"\"\"File 01logit.py\n",
-    "\n",
-    ":author: Michel Bierlaire, EPFL\n",
-    ":date: Thu Sep  6 15:14:39 2018\n",
-    "\n",
-    " Example of a logit model.\n",
-    " Three alternatives: Train, Car and Swissmetro\n",
-    " SP data\n",
-    "\"\"\"\n",
-    "\n",
-    "import pandas as pd\n",
-    "import biogeme.database as db\n",
-    "import biogeme.biogeme as bio\n",
-    "from biogeme import models\n",
-    "from biogeme.expressions import Beta\n",
-    "import numpy as np\n",
-    "import biogeme.results as res\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from random import seed\n",
-    "seed(1)\n",
-    "\n"
+    "if __name__ == '__main__':\n",
+    "    ASC_TRAIN = Beta('ASC', 0, 0)\n",
+    "    ASC_SM = Beta('ASC', 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "93d7d44b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ASC_SM' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [43]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mASC_SM\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ASC_SM' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ASC_SM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9bda54d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ASC']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Beta.BetaList)\n",
+    "# del ASC_TRAIN\n",
+    "del Beta.BetaList\n"
    ]
   },
   {
