--- a/DNN-MNP.ipynb
+++ b/DNN-MNP.ipynb
@@ -12,13 +12,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "288fab22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Unnamed: 0', 'a1', 'b1', 'p1', 'q1', 'a2', 'b2', 'p2', 'q2', 'choice', 'de']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = list(df.columns)\n",
+    "z.append('de')\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "322147e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a1</th>\n",
+       "      <th>b1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.368596</td>\n",
+       "      <td>-0.803612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.944801</td>\n",
+       "      <td>-0.474129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.303643</td>\n",
+       "      <td>0.565079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.457567</td>\n",
+       "      <td>0.255848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.094776</td>\n",
+       "      <td>-0.057214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>0.369153</td>\n",
+       "      <td>-0.204580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>0.869922</td>\n",
+       "      <td>0.375685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>0.340055</td>\n",
+       "      <td>0.020620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>-0.604374</td>\n",
+       "      <td>-0.446506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>-0.911111</td>\n",
+       "      <td>-0.768189</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            a1        b1\n",
+       "0    -0.368596 -0.803612\n",
+       "1     0.944801 -0.474129\n",
+       "2     0.303643  0.565079\n",
+       "3     0.457567  0.255848\n",
+       "4    -0.094776 -0.057214\n",
+       "...        ...       ...\n",
+       "9995  0.369153 -0.204580\n",
+       "9996  0.869922  0.375685\n",
+       "9997  0.340055  0.020620\n",
+       "9998 -0.604374 -0.446506\n",
+       "9999 -0.911111 -0.768189\n",
+       "\n",
+       "[10000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('Dataset_MNL.csv')\n",
-    "global().update(df.)"
+    "df = pd.read_csv('Dataset_MNL.csv', sep=' ')\n",
+    "# global().update(df.columns)\n",
+    "df1 = pd.DataFrame()\n",
+    "z = list(df1.columns)\n",
+    "z.append('a1')\n",
+    "df1 = pd.concat([df1, df['a1']],axis=1)\n",
+    "z.append('b1')\n",
+    "df1 = pd.concat([df1, df['b1']],axis=1)\n",
+    "df1.columns = z\n",
+    "df1"
    ]
   },
   {
